app/src/styl/_layout.styl
//edit()
bp = 990px

html
	::selection
		background #d04c3f
		color #fff
		
body
	position relative
	display flex
	height 100vh
	font-family 'Roboto' sans-serif
	font-size 16px
	+below(bp)
		flex-direction column
		font-size 16px
	
	
aside.barra-lateral
	background url("../img/sidebar-bg.jpg") no-repeat center center
	background-size cover
	width 34%
	display flex
	justify-content center
	align-items center
	+below(bp)
		width auto

	.card
		display flex
		border-left 1px solid #ff3366
		width 70%
		height 50px
		align-items center
		justify-content center
		background rgba(256,256,256,.1)
		span
			color #fff
			font-weight 100
		
			
	
section.conteudo
	overflow-y scroll
	position relative
	flex-grow 1
	display flex
	flex-direction column
	min-height 100vh
	+below(bp)
		min-height 100vh

	
	.display
		background Peachpuff
		padding-top 20px
		padding-left 20px
		padding-right 20px
		padding-bottom 70px
		display flex
		flex-direction column
		flex-grow 1
		+below(bp)
			padding-bottom 200px
		
	.insert
		background #f3f0ef
		width 100%
		display flex
		position fixed
		bottom 0
		color #333
		align-items center
		justify-content space-around
		+below(bp)
			padding .8rem 0
			width 100%
		
.info
	display flex
	flex-grow 1
	
.icon
	flex 0 0 10%
	svg
		height 52px
		width auto
		fill #4a4a4a
		
		+below(bp)
			height 100px
		

.input
	margin 5px 1%
	width 70%
	+below(bp)
		width 84%
		margin-right 2%
	input 
		border-radius 5px
		width 98%
		padding 12px 1%
		border none
		border-spacing 0
		&:focus
			outline none
		+below(bp)
			font-size 2rem
			padding 4% 2%
			
		
.msg
	max-width 74%
	display block
	margin 15px 0
	border-radius 5px
	color #5a5a5a
	padding .7rem
	line-height 1.3rem
	+below(bp)
		padding 1.4rem
		line-height 1.5rem
	
.me
	align-self flex-end
	background #dcf8c6
.not-me
	background #fff
	align-self flex-start

